# erp-shipping

./: IMPROVEMENTS.md  MANIFEST.in  MODERNIZATION_SUMMARY.md  pyproject.toml
haulage_mgmt/: boot.py  hooks.py  install.py  pyproject.toml
haulage_mgmt/haulage_logistics/: api.py  haulage_trip_hub.js  tasks.py  trip_financials.py  trip_status.py
haulage_mgmt/haulage_logistics/doctype/driver/: driver.py  test_driver.py
haulage_mgmt/haulage_logistics/doctype/haulage_custody_type/: test_haulage_custody_type.py
haulage_mgmt/haulage_logistics/doctype/haulage_expense_type/: test_haulage_expense_type.py
haulage_mgmt/haulage_logistics/doctype/haulage_logistics_settings/: haulage_logistics_settings.json  haulage_logistics_settings.py  test_haulage_logistics_settings.py
haulage_mgmt/haulage_logistics/doctype/haulage_trip/: haulage_trip.js  haulage_trip.json  haulage_trip.py  haulage_trip_list.js  test_haulage_trip.py
haulage_mgmt/haulage_logistics/doctype/haulage_trip_custody/: haulage_trip_custody.json  test_haulage_trip_custody.py
haulage_mgmt/haulage_logistics/doctype/haulage_trip_event/: haulage_trip_event.json  haulage_trip_event.py  test_haulage_trip_event.py
haulage_mgmt/haulage_logistics/doctype/haulage_trip_expense/: haulage_trip_expense.json  haulage_trip_expense.py  test_haulage_trip_expense.py
haulage_mgmt/haulage_logistics/doctype/haulage_trip_shipment/: haulage_trip_shipment.json  haulage_trip_shipment.py  test_haulage_trip_shipment.py
haulage_mgmt/haulage_logistics/report/: report_common.js
haulage_mgmt/translations/: ar.csv
(+13 files in other folders)
