[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haulage_mgmt"
version = "0.1.30"
description = "Haulage / fleet logistics for ERPNext"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Haulage Mgmt"},
]
classifiers = [
    "Framework :: Frappe",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/shaasie-solutions/newapp"

[tool.setuptools.packages.find]
include = ["haulage_mgmt*"]

[tool.setuptools.package-data]
haulage_mgmt = [
    "**/*.json",
    "**/*.js",
    "**/*.html",
    "**/*.css",
    "**/*.svg",
    "translations/*.csv",
]
